--- a/spartanz/frontend/src/compoents/membersF/style/styles.css
+++ b/spartanz/frontend/src/compoents/membersF/style/styles.css
@@ -25,3 +25,10 @@
 .footerEnd{
     background-color: rgba(0, 0, 0, 0.2)
 }
+
+.ContactUs{
+    margin-top:  10px;
+    /* background-color:#8b0000; */
+        /* color:"inof"; */
+    
+}
